[package]
authors = ["oldsheep68 <oldsheep68@hotmail.com>"]
edition = "2018"
readme = "README.md"
name = "bltouch-gcode-ctrl"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
# cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
nb = "1"
stm32f4 = {version ="0.14.0", features = ["rt"] }
usb-device = "0.2.5"
usbd-serial = "0.1.0"
heapless = "0.7.5"
embedded-hal = { features = ["unproven"], version = "0.2.6" }
stm32f4xx-hal = {version = "0.11.1", features=["stm32f411", "usb_fs", "rt"]}
synopsys-usb-otg = { version = "0.2.0", features = ["cortex-m"], optional = true }

gcode = {version = "0.6.1", default-features = false }
arrayvec = { version ="0.7.2", default-features = false }

rtt-target = { version = "0.3.1", features = ["cortex-m"] }

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

[dev-dependencies]


# [features]
# device-selected = ["stm32f4xx-hal/stm32f411"]

# this lets you use `cargo fix`!
[[bin]]
name = "bltouch-gcode-ctrl"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
# features = ["stm32f411", "rt"]
